# Alien-Gateway

./: .gitignore  .gitmodules  Cargo.toml  SECURITY.md  SECURITY_FIX_SUMMARY.md  TODO.md  package-lock.json  package.json
.husky/: pre-commit  pre-push
docs/: ROADMAP.md  credit.md  threat-model.md
gateway-contract/contracts/auction_contract/: Cargo.toml  auction.md
gateway-contract/contracts/auction_contract/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
gateway-contract/contracts/auction_contract/test_snapshots/test/: test_already_claimed.1.json  test_auction_full_lifecycle.1.json  test_auction_no_bids_close.1.json  test_claim_not_winner_fails.1.json  test_claim_twice_fails.1.json  test_claim_username_success.1.json  test_close_auction_early_fails.1.json  test_close_auction_emits_event.1.json  test_close_auction_not_expired.1.json  test_close_auction_not_open.1.json  test_close_auction_success.1.json  test_close_auction_zero_bid.1.json  test_create_auction_past_end_time_fails.1.json  test_create_duplicate_auction_fails.1.json  test_no_factory_contract.1.json  test_not_closed.1.json  test_not_winner.1.json  test_outbid_self_fails.1.json  test_place_bid_after_close_fails.1.json  test_place_bid_too_low_fails.1.json
gateway-contract/tests/: Cargo.toml
gateway-contract/tests/e2e/: mock_registration_contract.rs  test_full_flow.rs
gateway-contract/tests/test_snapshots/: e2e_add_stellar_address_and_resolve.1.json  e2e_escrow_deposit_schedule_payment.1.json  e2e_offchain_proof_to_onchain.1.json  e2e_sdk_send_to_username.1.json
sdk/: package.json  (+1 more)
(+250 files in other folders)
