[package]
name = "e2e_tests"
version = "0.0.0"
edition = "2021"
publish = false


[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
core_contract = { path = "../contracts/core_contract" }
escrow_contract = { path = "../contracts/escrow_contract" }

[lib]
name = "e2e_tests"
path = "e2e/test_full_flow.rs"
